trying to move spell retrieval to spell-logic. Hiding damage info if no damage done

--- a/src/components/spell.css
+++ b/src/components/spell.css
@@ -90,6 +90,10 @@
     transform: scale(1.2);
 }
 
+.spell-card-extra--damage-content {
+    display: inline-block;
+}
+
 @media (prefers-reduced-motion: no-preference) {
     .spell-card-icon--damage-type {
       animation: spell-icon-spin infinite 2s linear;
